# notes-llm

./: .gitignore  README.md  apple-notes-wiki-daemon-spec.md  apple_notes_bridge.py  config.sample.yml  config_loader.py  daemon.py  file_extractor.py  html_converter.py  install.sh  llm_client.py  pyproject.toml  state_manager.py
launchd/: com.github.namuan.wiki-daemon.plist  com.github.namuan.wiki-lint.plist  com.user.wiki-daemon.plist  com.user.wiki-lint.plist
schema_templates/: book_notes.md  business.md  general.md  research.md
tests/: test_bridge.py  test_html_converter.py  test_llm_client.py  test_state_manager.py
